Added support for I18n JSON localization files