@@ -1,74 +1,76 @@
-
 plugins {
-    id 'java'
-    id 'application'
-    id 'org.javamodularity.moduleplugin' version '1.8.12'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+  id 'java'
+  id 'application'
+  id 'org.javamodularity.moduleplugin' version '1.8.12'
+  id 'org.openjfx.javafxplugin' version '0.0.13'
+  id 'org.beryx.jlink' version '2.25.0'
 }
 
 group 'de.keksuccino.linguji'
-version '1.1.2'
+version '1.3.0'
 
 repositories {
 
-    mavenCentral()
-
+  mavenCentral()
+  
 //    maven {
 //        name = "clojars.org"
 //        url = uri("https://repo.clojars.org")
 //    }
-
+  
 }
 
 ext {
-    junitVersion = '5.10.0'
+  junitVersion = '5.10.2'
 }
 
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+  options.encoding = 'UTF-8'
 }
 
 application {
-    mainModule = 'de.keksuccino.linguji.linguji'
-    mainClass = 'de.keksuccino.linguji.linguji.frontend.LingujiApplication'
+  mainModule = 'de.keksuccino.linguji.linguji'
+  mainClass = 'de.keksuccino.linguji.linguji.frontend.LingujiApplication'
+  applicationDefaultJvmArgs = [
+          "--add-opens", "javafx.graphics/javafx.stage=de.keksuccino.linguji.linguji",
+          "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=de.keksuccino.linguji.linguji"
+  ]
 }
 
 javafx {
-    version = '17.0.6'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
+  version = '17.0.6'
+  modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
 
-    implementation('org.controlsfx:controlsfx:11.1.2')
-    implementation('net.synedra:validatorfx:0.4.0') {
-        exclude(group: 'org.openjfx')
-    }
-    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
+  implementation('org.controlsfx:controlsfx:11.2.1')
+  implementation('net.synedra:validatorfx:0.5.0') {
+    exclude(group: 'org.openjfx')
+  }
+  implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-
-    implementation group: 'org.jetbrains', name: 'annotations', version: '24.1.0'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.22.1'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
-    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
-    implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'
-    implementation group: 'net.java.dev.jna', name: 'jna', version: '5.14.0'
-    implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.14.0'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
-//    implementation 'net.clojars.suuft:libretranslate-java:1.0.5'
-
+  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+  
+  implementation group: 'org.jetbrains', name: 'annotations', version: '24.1.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.22.1'
+  implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+  implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3'
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
+  implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'
+  implementation group: 'net.java.dev.jna', name: 'jna', version: '5.14.0'
+  implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.14.0'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
+  //implementation 'net.clojars.suuft:libretranslate-java:1.0.5'
+  
 }
 
 test {
-    useJUnitPlatform()
+  useJUnitPlatform()
 }
 
 jlink {
@@ -81,5 +83,5 @@ jlink {
 }
 
 jlinkZip {
-    group = 'distribution'
+  group = 'distribution'
 }
